--- a/templates/partials/_navbar.html.twig
+++ b/templates/partials/_navbar.html.twig
@@ -1,7 +1,7 @@
 <!-- Navigation with a burger menu -->
 <header class="header py-5">
-    <nav id="nav" class="navbar fixed-top navbar-expand-xl navbar-light bg-white ">
-        <a class="navbar-brand" href="{{ current == 'home'? '#hero' : path('home') }}">
+    <nav id="nav" class="navbar fixed-top navbar-expand-lg navbar-light bg-white ">
+        <a class="navbar-brand" href="{{ current == 'home'? '#' : path('home') }}">
         {% if theme.picture is defined %}
             <img id="ephemeride" src="{{ vich_uploader_asset(theme, 'pictureFile') }}"  alt="">
         {% else %}
@@ -17,37 +17,71 @@
                     <li class="nav-item {{ current == 'home'? 'active'}}">
                         <a class="nav-link" href="#">Accueil</a>
                     </li>
-                    <li class="nav-item">
+
+                    {# dropdown menu in lg only #}
+                    <li class="nav-item dropdown d-none d-lg-block d-xl-none">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Le groupement
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="#about">Qui sommes-nous ?</a>
+                            <a class="dropdown-item" href="#valeurs">Nos valeurs</a>
+                            <a class="dropdown-item" href="#difference">Notre différence</a>
+                            <a class="dropdown-item" href="#objectifs">Nos objectifs</a>
+                        </div>
+                    </li>
+                    {# end dropdown menu in lg only #}
+
+                    {# distinct links in small and xl only #}
+                    <li class="nav-item d-md-none d-xl-block">
                         <a class="nav-link" href="#about">Qui sommes-nous ?</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item d-md-none d-xl-block">
                         <a class="nav-link" href="#valeurs">Nos valeurs</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item d-md-none d-xl-block">
                         <a class="nav-link" href="#difference">Notre différence</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item d-md-none d-xl-block">
                         <a class="nav-link" href="#objectifs">Nos objectifs</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item d-md-none d-xl-block">
                         <a class="nav-link" href="#contact">Contact</a>
                     </li>
+                    {# end distinct links in small and xl only #}
                 {% else %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('home') }}">Accueil</a>
                     </li>
-                    <li class="nav-item">
+
+                    {# dropdown menu in lg only #}
+                    <li class="nav-item dropdown d-none d-lg-block d-xl-none">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Le groupement
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="{{ path('home') }}#about">Qui sommes-nous ?</a>
+                            <a class="dropdown-item" href="{{ path('home') }}#valeurs">Nos valeurs</a>
+                            <a class="dropdown-item" href="{{ path('home') }}#difference">Notre différence</a>
+                            <a class="dropdown-item" href="{{ path('home') }}#objectifs">Nos objectifs</a>
+                        </div>
+                    </li>
+                    {# end dropdown menu in lg only #}
+
+                    {# distinct links in small and xl only #}
+                    <li class="nav-item d-md-none d-xl-block">
                         <a class="nav-link" href="{{ path('home') }}#about">Qui sommes-nous ?</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item d-md-none d-xl-block">
                         <a class="nav-link" href="{{ path('home') }}#valeurs">Nos valeurs</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item d-md-none d-xl-block">
                         <a class="nav-link" href="{{ path('home') }}#difference">Notre différence</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item d-md-none d-xl-block">
                         <a class="nav-link" href="{{ path('home') }}#objectifs">Nos objectifs</a>
                     </li>
+                    {# distinct links in small and xl only #}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('home') }}#contact">Contact</a>
                     </li>
