--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -312,7 +312,8 @@
                 </form>
             </section>
         </main>
-        {# <div class="sticky-slim-footer">
-            
-        </div> #}
+        <div class="sticky-slim-footer">
+            <a id="mail" class="footer-slim-link" href="mailto:contact@ynovagroup.com" class="p-3">contact@ynovagroup.com</a>
+            <a id="tel" class="footer-slim-link" href="tel:+33134205268" class="p-3">+33 (0)9 82 38 54 56</a>
+        </div>
 {% endblock %}
