--- a/templates/backend/theme/edit.html.twig
+++ b/templates/backend/theme/edit.html.twig
@@ -6,6 +6,7 @@
     <h1>Modification d'un thème</h1>
     <div class="card p-4">
     {{ include('backend/partials/_flash.html.twig') }}
+    {{ include('backend/theme/_delete_form.html.twig') }}
     {% if theme.picture is not null %}
         <img class="" style="max-height: 400px" src="{{ vich_uploader_asset(theme, 'pictureFile') }}" alt="{{ theme.title|default('logo du thème') }}" />
     {% else %}
@@ -20,5 +21,4 @@
     </div>
     <a class="link-green" href="{{ path('backend_theme_index') }}">Retour à la liste des thèmes</a>
 
-    {# {{ include('backend/theme/_delete_form.html.twig') }} #}
 {% endblock %}
