--- a/templates/backend/company/edit.html.twig
+++ b/templates/backend/company/edit.html.twig
@@ -6,6 +6,7 @@
     <h1>Modification d'une pharmacie</h1>
     <div class="card p-4">
     {{ include('backend/partials/_flash.html.twig') }}
+    {{ include('backend/company/_delete_form.html.twig', {'button_label': 'Enregistrer'}) }}
     {% if company.picture is not null %}
         <img class="card-img-top" style="max-height: 400px" src="{{ vich_uploader_asset(company, 'pictureFile') }}" alt="{{ company.name|default('image de la pharmacie') }}" />
     {% else %}
