--- a/templates/backend/rss/edit.html.twig
+++ b/templates/backend/rss/edit.html.twig
@@ -5,10 +5,10 @@
 {% block body %}
     <h1>Modifier un flux RSS</h1>
     <div class="card p-4">
-        {{ include('backend/partials/_flash.html.twig') }}
+        {{ include('backend/partials/_flash.html.twig') }}        
+        {{ include('backend/rss/_delete_form.html.twig', {'button_label': 'Enregistrer'}) }}
         {{ include('backend/rss/_form.html.twig', {'button_label': 'Enregistrer'}) }}
     </div>
     <a class="link-green" href="{{ path('backend_rss_index') }}">Retour à la liste des flux RSS</a>
 
-    {{ include('backend/rss/_delete_form.html.twig') }}
 {% endblock %}
