--- a/templates/backend/theme/_delete_form.html.twig
+++ b/templates/backend/theme/_delete_form.html.twig
@@ -1,5 +1,7 @@
-<form method="post" action="{{ path('theme_delete', {'id': theme.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('theme_delete', {'id': theme.id}) }}" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer ce thème ?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ theme.id) }}">
-    <button class="btn">Delete</button>
+    <p class="text-right">
+        <button class="btn btn-danger"><i class="fas fa-trash-alt"></i> Supprimer</button>
+    </p>
 </form>
