--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -291,25 +291,20 @@
             </section>
             <!-- C O N T A C T -->
             <section id="contact" class="container-fluid p-0 text-center py-5 m-0">
-             <h2 class="titre-contact h1-responsive font-weight-bold my-5">Contact</h2>
-                <form class="p-5">
-                    <div class="form-group">
-                        <label for="formGroupExampleInput2">NOM Prénom</label>
-                        <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Veuillez renseigner votre identité" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="exampleInputEmail1">Adresse e-mail</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Entrer votre adresse e-mail" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="exampleFormControlTextarea1">Message</label>
-                        <textarea type="textarea" class="form-control" id="exampleFormControlTextarea1" placeholder="Veuillez écrire ici votre message..." required rows="10"></textarea>
-                    </div>
-                    <button type="submit" class="form-btn btn btn-success">
-                        Envoyer
-                        <i class="far fa-paper-plane"></i>
-                    </button>
-                </form>
+                <h2 class="titre-contact h1-responsive font-weight-bold my-5">Contact</h2>
+                <div class="container" style="max-width: 700px;">
+                    {% for label, messages in app.flashes %}
+                        {% for message in messages %}
+                            <div class="alert alert-{{ label }}" role="alert">
+                                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                                {{ message }}
+                            </div>
+                        {% endfor %}
+                    {% endfor %}
+                    {{ include('/home/_mailform.html.twig') }}
+                </div>
             </section>
         </main>
         <div id="sticky-footer">
