Carousel Notre différence WIP

--- a/templates/home/_nosdifferences.html.twig
+++ b/templates/home/_nosdifferences.html.twig
@@ -1,4 +1,4 @@
-<div class="container">
+<div>
     <div id="carouselExampleIndicators" class="carousel slide bg-success" data-ride="carousel">
     <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -9,35 +9,47 @@
     <div class="carousel-inner">
     
         <div style="height:200px;" class="carousel-item active">
+            <img class="d-block w-100" src="{{ asset('images/ecoute.jpg') }}" alt="">
+            <div class="carousel-caption d-none d-md-block">
                 <h4>
                     <i class="fas fa-angle-double-right fa-1x"></i>
                     Écoute et disponibilité
                 </h4>
                 <p>Un interlocuteur proche de vous pour pérenniser le dynamisme de votre officine</p>
+            </div>
         </div>
 
         <div style="height:200px;" class="carousel-item">
+            <img class="d-block w-100" src="{{ asset('images/offre.jpg') }}" alt="">
+            <div class="carousel-caption d-none d-md-block">
                 <h4>
                     <i class="fas fa-angle-double-right fa-1x"></i>
                     Une offre complète
                 </h4>
                 <p>Une intervention sur les 4 dimensions clé de l'officine</p>
+            </div>
         </div>
 
         <div style="height:200px;" class="carousel-item">
-                <h4>
-                    <i class="fas fa-angle-double-right fa-1x"></i>
-                    Répondre à vos problématiques spécifiques
-                </h4>
-                <p>Votre conseiller vous accompagne pour mettre en place un plan d'action personnalisé</p>
+                <img class="d-block w-100" src="{{ asset('images/problematique.jpg') }}" alt="">
+                <div class="carousel-caption d-none d-md-block">
+                    <h4>
+                        <i class="fas fa-angle-double-right fa-1x"></i>
+                        Répondre à vos problématiques spécifiques
+                    </h4>
+                    <p>Votre conseiller vous accompagne pour mettre en place un plan d'action personnalisé</p>
+                </div>
         </div>
 
         <div style="height:200px;" class="carousel-item">
+            <img class="d-block w-100" src="{{ asset('images/equipe.jpg') }}" alt="">
+            <div class="carousel-caption d-none d-md-block">
                 <h4>
                     <i class="fas fa-angle-double-right fa-1x"></i>
                     Toute votre équipe au coeur de nos préoccupations
                 </h4>
                 <p>Une approche innovante de la formation et des supports techniques éprouvés</p>
+            </div>
         </div>
 
     </div>
