--- a/templates/partials/_footer.html.twig
+++ b/templates/partials/_footer.html.twig
@@ -1,19 +1,19 @@
 <!-- Footer -->
 <footer id="footerExpand "class="footer">
-    <div class="footer-dl m-5 text-center">
+    <div class="footer-dl text-center">
         <h6 class="h6 text-uppercase">Téléchargez notre plaquette</h6>
         <a href="http://www.ynovagroup.com/Plaquette/Plaquette_YnovaGroup.pdf" class="m-3" id="plaquette">
             <i class="fa fa-download fa-3x m-4" aria-hidden="true"></i>
         </a>
     </div>
-    <div class="footer-infos m-5 text-center">
+    <div class="footer-infos text-center">
         <h6 class="h6 text-uppercase">Contact</h6>
         <div class="footer-infos-element">
             <a id="mail" href="mailto:contact@ynovagroup.com" class="p-3">contact@ynovagroup.com</a>
             <a id="tel" href="tel:+33134205268" class="p-3">+33 (0)9 82 38 54 56</a>
         </div>
     </div>
-    <div class="footer-infos m-5 text-center">
+    <div class="footer-infos text-center">
         <h6 class="h6 text-uppercase">Informations générales</h6>
         <div class="footer-infos-element">
             <a id="rgpd" href="{{ path('rgpd') }}" class="p-3">Politique de confidentialité</a>
