--- a/templates/partials/_footer.html.twig
+++ b/templates/partials/_footer.html.twig
@@ -1,5 +1,5 @@
 <!-- Footer -->
-<footer id="footerExpand "class="footer">
+<footer id="footerExpand "class="footer pt-5">
     <div class="footer-dl text-center">
         <h6 class="h6 text-uppercase">Téléchargez notre plaquette</h6>
         <a href="http://www.ynovagroup.com/Plaquette/Plaquette_YnovaGroup.pdf" class="m-3" id="plaquette">
