--- a/templates/home/_nosdifferences.html.twig
+++ b/templates/home/_nosdifferences.html.twig
@@ -1,5 +1,5 @@
 <div>
-    <div id="carouselExampleIndicators" class="carousel slide bg-success" data-ride="carousel">
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -12,7 +12,7 @@
             <img class="d-block w-100" src="{{ asset('images/ecoute.jpg') }}" alt="">
             <div class="carousel-caption d-none d-md-block">
                 <h4>
-                    <i class="fas fa-angle-double-right fa-1x"></i>
+                    {# <i class="fas fa-angle-double-right fa-1x"></i> #}
                     Écoute et disponibilité
                 </h4>
                 <p>Un interlocuteur proche de vous pour pérenniser le dynamisme de votre officine</p>
@@ -23,7 +23,7 @@
             <img class="d-block w-100" src="{{ asset('images/offre.jpg') }}" alt="">
             <div class="carousel-caption d-none d-md-block">
                 <h4>
-                    <i class="fas fa-angle-double-right fa-1x"></i>
+                    {# <i class="fas fa-angle-double-right fa-1x"></i> #}
                     Une offre complète
                 </h4>
                 <p>Une intervention sur les 4 dimensions clé de l'officine</p>
@@ -34,7 +34,7 @@
                 <img class="d-block w-100" src="{{ asset('images/problematique.jpg') }}" alt="">
                 <div class="carousel-caption d-none d-md-block">
                     <h4>
-                        <i class="fas fa-angle-double-right fa-1x"></i>
+                        {# <i class="fas fa-angle-double-right fa-1x"></i> #}
                         Répondre à vos problématiques spécifiques
                     </h4>
                     <p>Votre conseiller vous accompagne pour mettre en place un plan d'action personnalisé</p>
@@ -45,7 +45,7 @@
             <img class="d-block w-100" src="{{ asset('images/equipe.jpg') }}" alt="">
             <div class="carousel-caption d-none d-md-block">
                 <h4>
-                    <i class="fas fa-angle-double-right fa-1x"></i>
+                    {# <i class="fas fa-angle-double-right fa-1x"></i> #}
                     Toute votre équipe au coeur de nos préoccupations
                 </h4>
                 <p>Une approche innovante de la formation et des supports techniques éprouvés</p>
