--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -293,16 +293,7 @@
             <section id="contact" class="container-fluid p-0 text-center py-5 m-0">
                 <h2 class="titre-contact h1-responsive font-weight-bold my-5">Contact</h2>
                 <div class="container" style="max-width: 700px;">
-                    {% for label, messages in app.flashes %}
-                        {% for message in messages %}
-                            <div class="alert alert-{{ label }}" role="alert">
-                                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                </button>
-                                {{ message }}
-                            </div>
-                        {% endfor %}
-                    {% endfor %}
+                    {{ include('/partials/_flash.html.twig') }}
                     {{ include('/home/_mailform.html.twig') }}
                 </div>
             </section>
