--- a/templates/user/profil.html.twig
+++ b/templates/user/profil.html.twig
@@ -15,6 +15,9 @@
         <a class="nav-link {{ (activePanel == 'actualite')? 'active' }} text-success" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Mon profil</a>
     </li>
     <li class="nav-item">
+        <a class="nav-link {{ (activePanel == 'profil')? 'active' }} text-success" id="profil-tab" data-toggle="tab" href="#profil" role="tab" aria-controls="profil" aria-selected="true">Mon profil</a>
+    </li>
+    <li class="nav-item">
         <a class="nav-link {{ (activePanel == 'files')? 'active' }} text-success" id="document-tab" data-toggle="tab" href="#document" role="tab" aria-controls="document" aria-selected="false">Documents</a>
     </li>
     <li class="nav-item">
@@ -22,105 +25,22 @@
     </li>
     </ul>
     <div class="tab-content" id="myTabContent">
-    <div class="tab-pane fade {{ (activePanel == 'actualite')? 'show active' }} px-5" id="home" role="tabpanel" aria-labelledby="home-tab">
-    
-    <!--Profil-->
-        <h5 class="h2 font-weight-bold text-success">Mon espace</h5>
-        {# <em class="">Bienvenue sur votre espace personnel !<br>Retrouvez ici les informations de votre pharmacie</em> #}
-        <div>
-            {% if company is defined and company.picture is not null %}
-                <img class="img-fluid" src="{{ vich_uploader_asset(company, 'pictureFile') }}" alt="{{ company.name|default('photo de la pharmacie') }}" />
-            {% else %}
-                <img src="https://via.placeholder.com/468x200?text=Image+de+la+pharmacie" class="img-fluid" alt="..."> 
-            {% endif %}
-        </div>
-        <ul class="list-group list-group-flush text-center">
-            <li class="list-group-item font-weight-bold text-uppercase">Nom</li>
-            <li class="list-group-item">{{ user.lastname|default('') }}</li>
-            <li class="list-group-item font-weight-bold text-uppercase">Prénom</li>        
-            <li class="list-group-item">{{ user.firstname|default('') }}</li>
-            <li class="list-group-item font-weight-bold text-uppercase">Nom de la pharmacie</li>
-            <li class="list-group-item">{{ user.company.name|default('') }}</li>
-            <li class="list-group-item font-weight-bold text-uppercase">Adresse</li>
-            <li class="list-group-item">{{ user.company.firstadressfield|default('-') }} {{ user.company.secondadressfield|default('') }}</li>
-            <li class="list-group-item font-weight-bold text-uppercase">E-mail</li>
-            <li class="list-group-item">{{ user.email|default('-') }}</li>
-            <li class="list-group-item font-weight-bold text-uppercase">Téléphone</li>
-            <li class="list-group-item">{{ user.company.phone|default('-') }}</li>
-        </ul>
+        <!--Actualites-->
+            {{ include('/user/_panel_actualites.html.twig') }}
+        <!--Actualites-->
 
-        <div class="card-body">
-            <h5 class="h2 font-weight-bold text-success mt-5">Mon commercial</h5>
-            <em class="">Retrouvez les coordonnées de votre commercial.</em>
-        </div>
+        <!--Profil-->
+            {{ include('/user/_panel_mon_profil.html.twig') }}
+        <!--Profil-->
 
-        <ul class="list-group list-group-flush text-center">
-            <li class="list-group-item font-weight-bold text-uppercase">Nom Prénom</li>
-            <li class="list-group-item">
-                {{ user.company.commercial.firstname|default('-') }} {{ user.company.commercial.lastname|default('') }}
-            </li>
-            <li class="list-group-item font-weight-bold text-uppercase">password</li>        
-            <li class="list-group-item">
-                <a href="mailto:{{ user.company.commercial.email|default('-') }}">
-                {{ user.company.commercial.email|default('-') }}
-                </a>
-            </li>
-        </ul>
-    <!--Profil-->
-    
-    </div>
-    <div class="tab-pane fade {{ (activePanel == 'files')? 'show active' }} p-3" id="document" role="tabpanel" aria-labelledby="document-tab">
-    
         <!--Documents-->
-            <h5 class="h2 font-weight-bold pt-1 text-success">Mon espace documents</h5>
-            <em class=" py-5">Bonjour {{ user.firstname }}, <br> ici vous pourrez transmettre, consulter et télécharger vos fichiers relatifs à vos échanges auprès de votre commercial attitré.</em>
-            <div class="card-body">
-                <h5 class="h2 font-weight-bold mt-2 text-success">Transmettre un document à mon commercial</h5>
-                {{ include('/user/_form.html.twig') }}
-            </div>
-            <div class="card-body">
-                <h5 class="h2 font-weight-bold mt-1 text-success">Consulter mes derniers documents</h5>  
-                <table class="table table-hover">
-                    <thead class="thead-light">
-                        <tr>
-                        <th scope="col">Nom du document</th>
-                        <th scope="col">Format</th>
-                        <th scope="col">Date d'ajout</th>
-                        <th scope="col">Disponnible jusqu'au</th>
-                        <th scope="col">Télécharger</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for document in documents %}
-                        <tr>
-                        <th scope="row">{{ document.name|default('-') }}</th>
-                        <td>{{ document.documentFile.extension|default('-')}}</td>
-                        <td>{{ document.updatedAt|date('d/m/y')|default('-') }}</td>
-                        <td>{{ document.deletedAt is empty? "-" : document.deletedAt|date('d/m/y') }}</td>
-                        <td>
-                            <a href="http://127.0.0.1:8000{{ vich_uploader_asset(document, 'documentFile') }}" ping="{{ path('read_document', { 'id' : document.id }) }}" target="_blank">
-                                <i class="fas fa-file-upload fa-lg"></i>
-                            </a>
-                        </td>
-                        </tr>
-                        {% else %}
-                        <tr>
-                            <td colspan=5>Aucun document à télécharger</td>
-                        </tr>
-                        {% endfor %}
-                    </tbody>
-                    </table>
-            </div>
+            {{ include('/user/_panel_documents.html.twig') }}
         <!--Documents-->
-    
-    </div>
-    <div class="tab-pane fade {{ (activePanel == 'password')? 'show active' }} py-5" id="password" role="tabpanel" aria-labelledby="password-tab">
-            <h5 class="h2 font-weight-bold pt-1 text-success">Modifier mon mot de passe</h5>
-            <em class=" py-5">Bonjour {{ user.firstname }}, <br> ici vous pouvez modifier le mot de passe de votre espace adhérent.</em>
-            <div class="card-body">
-                {{ include('/security/changepassword.html.twig') }}
-            </div>
-    </div>
+        
+        <!--Password-->
+            {{ include('/user/_panel_changer_mot_de_passe.html.twig') }}
+        <!--Password-->
+
     </div>
 </div>
 {% endblock %}
