Modification .container-fluid

--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -19,7 +19,7 @@
             </section>
         </header>
         <!-- M A I N  S E C T I O N -->
-        <main class="main container p-0">
+        <main class="main container-fluid p-0">
             <!-- Citation Actu -->
             <section id="actu" class="container-fluid p-0 text-center py-3">
                 <!-- Section heading -->
