--- a/public/css/app.css
+++ b/public/css/app.css
@@ -464,10 +464,10 @@ td > a > i:hover {
     background-image: url('/images/teamwork.jpg');
     background-size: cover;
     background-attachment: fixed;
-    width: 100%;
+    max-width: 100vw;
     height: 750px;
-    margin: 0;
-    padding: 0;
+    /* margin: 0;
+    padding: 0; */
     z-index: 100;
 }
 
