Correction titre Actualités /profil

--- a/templates/user/profil.html.twig
+++ b/templates/user/profil.html.twig
@@ -12,7 +12,7 @@
 <!--Backoffice général-->
     <ul class="nav nav-tabs" id="myTab" role="tablist">
     <li class="nav-item">
-        <a class="nav-link {{ (activePanel == 'actualite')? 'active' }} text-success" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Mon profil</a>
+        <a class="nav-link {{ (activePanel == 'actualite')? 'active' }} text-success" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Actualités</a>
     </li>
     <li class="nav-item">
         <a class="nav-link {{ (activePanel == 'profil')? 'active' }} text-success" id="profil-tab" data-toggle="tab" href="#profil" role="tab" aria-controls="profil" aria-selected="true">Mon profil</a>
