--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,7 +11,7 @@
     </head>
     <body>
         {{ render(controller(
-            'App\\Controller\\NavbarController::index',
+            'App\\Controller\\Frontend\\NavbarController::index',
             { 'current': current }
         )) }}
         <div class="content">
