--- a/templates/user/_panel_actualites.html.twig
+++ b/templates/user/_panel_actualites.html.twig
@@ -1,4 +1,44 @@
 <div class="tab-pane fade {{ (activePanel == 'actualite')? 'show active' }} p-3" id="home" role="tabpanel" aria-labelledby="home-tab">    
     <h5 class="h2 font-weight-bold text-success">Actualités</h5>
-    <em class="">Bienvenue sur votre espace personnel !<br>retrouvez ici les actualités d'Ynovagroup</em>
+    <em class="">Bienvenue sur votre espace personnel !<br> Retrouvez ici les actualités d'Ynovagroup</em>
+
+    <!-- Section Blog--> 
+    <div class="container">
+        {% for post in articles %}
+            <div class="card mt-3 mb-3 bg-white">
+                {% if post.picture is not null %}
+                    <img class="card-img-top" style="max-height: 400px" src="{{ vich_uploader_asset(post, 'pictureFile') }}" alt="{{ post.title|default('illustration de l\'article') }}" />
+                {% endif %}
+                <div class="card-body">
+                    <h3 class="card-title">{{post.title}}</h3>
+                    <p class="card-text">{{ post.content|raw }}</p>
+                    <p class="card-text"><small class="text-muted">Posté le {{post.createdAt|date("d/m/y")}} par 
+                    <cite title="auteur">
+                        {{ attribute(post.author, '__toString') is defined ? post.author.__toString : post.rssfeedname|default('-') }}
+                    </cite></small></p>
+                </div>
+            </div>
+
+
+            {# <div class="blog mt-5">
+                <h1 class="blog-title mt-5 h1">{{post.title}}</h1>
+                <span class="blog-date badge badge-pill badge-success">Posté le {{post.createdAt|date("d/m/y")}} par {{ post.author.firstname ~ ' ' ~ post.author.lastname}}</span>
+            </div>
+            {% if post.picture is defined %}
+                <img class="img-fluid rounded blog-img mt-3 mb-5" src="{{ post.picture }}" alt="">
+            {% endif %}
+            <div class="blog-post mb-5 p-3">
+                {{ post.content }}
+            </div> #}
+            {% if not loop.last %}
+                <hr>
+            {% endif %}
+        {% else %}
+            <div class="blog-post my-5 p-3 text-center">
+                <p>Aucun article n'a été publié pour le moment</p>
+            </div>
+        {% endfor %}
+        {# {{ knp_pagination_render(pagination) }} #}
+    </div>
+
 </div>
