en cours: dynamisation page notifications

--- a/templates/user/_panel_documents.html.twig
+++ b/templates/user/_panel_documents.html.twig
@@ -13,7 +13,7 @@
                     <th scope="col">Nom du document</th>
                     <th scope="col">Format</th>
                     <th scope="col">Date d'ajout</th>
-                    <th scope="col">Disponnible jusqu'au</th>
+                    <th scope="col">Disponible jusqu'au</th>
                     <th scope="col">Télécharger</th>
                     </tr>
                 </thead>
