--- a/templates/backend/notification/index.html.twig
+++ b/templates/backend/notification/index.html.twig
@@ -41,4 +41,20 @@
             </div>
         </div>
     </div>
+
+    <div class="card p-4 mt-3">
+        <table id="receivedFilesTable" class="table table-hover table-striped w-100">
+            <thead>
+                <tr>
+                    <th>#</th>
+                    <th>Nom du document</th>
+                    <th>Reçu le</th>
+                    <th>Lu</th>
+                    <th>Télécharger</th>
+                </tr>
+            </thead>
+            <tbody>
+            </tbody>
+        </table>
+    </div>
 {% endblock %}
