dynamisé affichage des documents reçu + créé interface pour téléchargement

--- a/templates/backend/notification/index.html.twig
+++ b/templates/backend/notification/index.html.twig
@@ -11,8 +11,8 @@
             <table id="receivedFilesTable" class="table table-hover table-striped w-100">
                 <thead>
                     <tr>
-                        <th>#</th>
                         <th>Nom du document</th>
+                        <th>Envoyé par</th>
                         <th>Reçu le</th>
                         <th>Lu</th>
                         <th>Télécharger</th>
