--- a/templates/backend/backend_layout.html.twig
+++ b/templates/backend/backend_layout.html.twig
@@ -13,7 +13,10 @@
     <body>
         {% include('/backend/partials/_navbar.html.twig') %}
         <div class="row py-4">
-            {% include('backend/partials/_sidebar.html.twig') %}
+            {{ render(controller(
+                'App\\Controller\\Backend\\SidebarController::index',
+                { 'current': current }
+            )) }}
             <div id="swup" class="transition-fade col-12 col-lg-10 pr-lg-5">
                 {% block body %}{% endblock %}
             </div>
